# rust-python

./: .gitignore  README.md  cdouble.pyx  create-rustlib.sh  double.py  requirements.txt  run-double.py  setup.py  test-double.py
pyext-myrustlib/: Cargo.toml
pyext-myrustlib/src/: lib.rs
