[package]
name = "pyext-myrustlib"
version = "0.1.0"
authors = ["sparrow0hawk <alexjcoleman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "myrustlib"
crate-type = ["dylib"]

[dependencies.cpython]
version = "0.1"
features = ["extension-module"]